# MultiImageViewer

./: CMakeLists.txt  README.md  backend.cpp  backend.h  image_loader.cpp  image_loader.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc
